# slangpy-imgui-bundle

./: .gitignore  README.md  flake.nix  pyproject.toml
playground/slangpy-window/: draw.slang  window.py
src/slangpy_imgui_bundle/: __init__.py  __main__.py  app.py  imgui_adapter.py  imgui_bundle.py
src/slangpy_imgui_bundle/shaders/: imgui_renderer.slang
