[project]
name = "slangpy-imgui-bundle"
version = "0.1.0"
description = "A slangpy renderer for ImGui Bundle."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imgui-bundle==1.6.3",
    "matplotlib>=3.10.7",
    "pyglm>=2.8.2",
    "slangpy>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
]
